2011-06-30  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        REGRESSION(r84294): new-run-webkit-tests results.html generate links to diffs.html or diff.png that don't exist
        https://bugs.webkit.org/show_bug.cgi?id=63494

        This patch does two things:

        1) Refactor diff_image to return the image diff instead of writing the
        diff to a file.  This fixes a bunch of hacks and disentangles a bunch
        of code.

        2) When there's a checksum mismatch but not image diff, we no longer
        report an IMAGE failure to results.html.  That fixes the bug in
        question because results.html won't try to link to a non-existent image
        diff.

        * Scripts/webkitpy/common/system/executive_mock.py:
        * Scripts/webkitpy/layout_tests/layout_package/single_test_runner.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_result_writer.py:
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/port/chromium_unittest.py:
        * Scripts/webkitpy/layout_tests/port/port_testcase.py:
        * Scripts/webkitpy/layout_tests/port/test.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:
        * Scripts/webkitpy/to_be_moved/rebaseline_chromium_webkit_tests.py:

2011-06-28  Hans Wennborg  <hans@chromium.org>

        Reviewed by Tony Chang.

        IndexedDB: Prepare for running layout tests with LevelDB
        https://bugs.webkit.org/show_bug.cgi?id=63593

        The TestShell must always provide a temporary folder for LevelDB,
        not just when the backing store type is overridden.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::setOverrideIndexedDBBackingStore):
        (LayoutTestController::clearAllDatabases):